--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -54,8 +54,8 @@
 							<label for="fit_to">Fit to</label>
 							<select class="form-control" id="fit_to" name="fit_to">
 								<option></option>
-								<option value="FIT_TO_HEIGHT">to height</option>
-								<option value="FIT_TO_WIDTH">to width</option>
+								<option value="FIT_TO_HEIGHT">height</option>
+								<option value="FIT_TO_WIDTH">width</option>
 								<option value="AUTOMATIC">auto</option>
 								<option value="FIT_EXACT">exact</option>
 							</select>
