error handling in ui

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,6 +39,7 @@
 								<input type="file" class="custom-file-input" id="image_file">
 								<label class="custom-file-label" for="image_file">Choose image</label>
 							</div>
+							<div class="invalid-feedback">There was a problem reading that image</div>
 						</div>
 					</div>
 					<div class="form-row">
