--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -65,8 +65,8 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="btn-group" role="group" aria-label="Basic example">
-								<button class="btn btn-secondary w-100" type="button" id="transform_image">Transform</button>
-								<button class="btn btn-secondary w-100" type="button" id="read_exif">Read EXIF data</button>
+								<button class="btn btn-secondary w-100" type="submit" id="transform_image">Transform</button>
+								<button class="btn btn-secondary w-100" type="submit" id="read_exif">Read EXIF data</button>
 							</div>
 						</div>
 					</div>
