--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,7 +36,7 @@
 									</label>
 								</div>
 							</div>
-							<input type="text" class="form-control d-none" id="image_url">
+							<input type="url" class="form-control d-none" id="image_url">
 							<div class="custom-file">
 								<input type="file" class="custom-file-input" id="image_file">
 								<label class="custom-file-label" for="image_file">Choose image</label>
